test/cli/test/rangeoperators/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-value
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: check-value
    validate:
      message: All data values must be in the specified range.
      pattern:
        data:
          fifth_value: -10--8
          first_value: +2-+4
          fourth_value: 2.5-3.5
          second_value: -2-5
          third_value: 100Mi!-1024Mi
      failureAction: Enforce
