test/cli/test/rangeoperators/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: ConfigMap
  policy: check-value
  resources:
  - test-config-fail
  result: fail
  rule: check-value
